# vct-cribl-cli

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
cribl_cli/: __init__.py  __main__.py  cli.py
cribl_cli/api/: __init__.py  client.py  endpoint_factory.py
cribl_cli/auth/: __init__.py  oauth.py
cribl_cli/commands/: alerts.py  billing.py  command_factory.py  config_cmd.py  destinations.py  edge.py  finops.py  groups.py  health.py  ingest.py  jobs.py  kms.py  license_usage.py  logger.py  metrics.py  notebooks.py  overview.py  packs.py  pipelines.py  preview.py  profiler.py  registry.py  routes.py  search.py  sources.py  system.py  version.py  workers.py
cribl_cli/config/: __init__.py  loader.py  types.py
cribl_cli/output/: __init__.py  formatter.py
cribl_cli/utils/: __init__.py  errors.py  group_resolver.py  group_transfer.py  org.py  pagination.py  unwrap.py  validation.py
dashboards/: daily-ingest.json  daily_ingest_by_route.json  daily_ingest_by_source.json  daily_ingest_overview.json  finops_consumption.json
docs/: architecture.md  commands.md  configuration.md  examples.md
skills/cribl-admin/: SKILL.md
skills/cribl-deploy/: SKILL.md
skills/cribl-destinations/: SKILL.md
skills/cribl-monitoring/: SKILL.md
skills/cribl-pipeline-setup/: SKILL.md
skills/cribl-search/: SKILL.md
skills/cribl-shared/: SKILL.md
skills/cribl-sources/: SKILL.md
src/commands/: credentials.ts  dashboards.ts  destinations.ts  edge.ts  lookups.ts  notebooks.ts  pipelines.ts  routes.ts  sources.ts  version.ts  (+1 more)
(+55 files in other folders)
