[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cribl-cli"
version = "1.0.0"
description = "CLI for the Cribl Cloud REST API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "tabulate>=0.9",
]

[project.scripts]
cribl = "cribl_cli.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
include = ["cribl_cli*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests (deselect with '-m \"not integration\"')",
]
